lang/src/ast/snapshots/rain_lang__ast__test__closure.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"fn () {}\")"
---
AnonymousFnDeclare(
 Args(
 )
 Block(
 )
)
