lang/src/ast/snapshots/rain_lang__ast__test__comment.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_script(\"\n        let b = 2\n        // This is silly\n        let a = b // Very silly\n        // Hehe\n        \")"
---
ModuleRoot(
 LetDeclare(
  private
  Assignment(
   Name(
    b
   )
   IntegerLiteral(
    2
   )
  )
 )
 LetDeclare(
  private
  Assignment(
   Name(
    a
   )
   Ident(
    b
   )
  )
 )
)
