lang/src/ast/snapshots/rain_lang__ast__test__destructure_single_item.snap
---
source: lang/src/ast/test.rs
expression: parse_display_script(src)
---
ModuleRoot(
 LetDeclare(
  private
  Assignment(
   Name(
    NamedDestructure(
     NamedDestructureElement(
      a
     )
    )
   )
   Record(
    RecordEntry(
     a
     IntegerLiteral(
      4
     )
    )
   )
  )
 )
)
