lang/src/ast/snapshots/rain_lang__ast__test__destructure_two_items.snap
---
source: lang/src/ast/test.rs
expression: parse_display_script(src)
---
ModuleRoot(
 LetDeclare(
  private
  Assignment(
   Name(
    NamedDestructure(
     NamedDestructureElement(
      a
      TypeSpec(
       Ident(
        Integer
       )
      )
     )
     NamedDestructureElement(
      b
     )
    )
   )
   Record(
    RecordEntry(
     a
     IntegerLiteral(
      4
     )
    )
    RecordEntry(
     b
     IntegerLiteral(
      6
     )
    )
   )
  )
 )
)
