lang/src/ast/snapshots/rain_lang__ast__test__dot_not_plus_dot_plus_expr.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"a.b + !c + !d.e\")"
---
BinaryOp(
 BinaryOp(
  BinaryOp(
   Ident(
    a
   )
   .
   Ident(
    b
   )
  )
  +
  Not(
   Ident(
    c
   )
  )
 )
 +
 Not(
  BinaryOp(
   Ident(
    d
   )
   .
   Ident(
    e
   )
  )
 )
)
