lang/src/ast/snapshots/rain_lang__ast__test__factorial.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_script(\"\n        let assert = std.test.assert\n        let eq = std.ops.eq\n\n        let main = fn() {\n        \tassert(factorial(5), 12)\n        }\n\n        let factorial = fn(n) {\n            if n == 0 {\n                1\n            } else {\n            \tfactorial(n - 1) * n\n        \t}\n        }\n        \")"
---
ModuleRoot(
 LetDeclare(
  private
  Assignment(
   Name(
    assert
   )
   Namespace(
    Namespace(
     Ident(
      std
     )
     .
     test
    )
    .
    assert
   )
  )
 )
 LetDeclare(
  private
  Assignment(
   Name(
    eq
   )
   Namespace(
    Namespace(
     Ident(
      std
     )
     .
     ops
    )
    .
    eq
   )
  )
 )
 LetDeclare(
  private
  Assignment(
   Name(
    main
   )
   AnonymousFnDeclare(
    Args(
    )
    Block(
     FnCall(
      Ident(
       assert
      )
      FnCall(
       Ident(
        factorial
       )
       IntegerLiteral(
        5
       )
      )
      IntegerLiteral(
       12
      )
     )
    )
   )
  )
 )
 LetDeclare(
  private
  Assignment(
   Name(
    factorial
   )
   AnonymousFnDeclare(
    Args(
     n
    )
    Block(
     IfCondition(
      BinaryOp(
       Ident(
        n
       )
       ==
       IntegerLiteral(
        0
       )
      )
      Block(
       IntegerLiteral(
        1
       )
      )
      Block(
       BinaryOp(
        FnCall(
         Ident(
          factorial
         )
         BinaryOp(
          Ident(
           n
          )
          -
          IntegerLiteral(
           1
          )
         )
        )
        *
        Ident(
         n
        )
       )
      )
     )
    )
   )
  )
 )
)
