lang/src/ast/snapshots/rain_lang__ast__test__fn_call_no_args_precedence.snap
---
source: lang/src/ast/test.rs
expression: "parse_display_expr(\"foo.bar()\")"
---
FnCall(
 Namespace(
  Ident(
   foo
  )
  .
  bar
 )
)
